Add optional configuration scripts to all bash startup scripts and move them from bin/ to conf/